--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,10 @@
-
-/* Your CSS Code here. */
-main{
-	width: 150px;
-	height: 150px;
-	background-color: black;
+.accio{
+    background-color: #000000;
+    width: 150px;
+    height: 150px;
 }
-
-p.hello-accio{
-	color: white;
-	left-margin:32px;
-	padding: 10px;
+.hello-accio{
+    color: #ffffff;
+    margin-left: 32px;
+    padding: 10px;
 }
